Fix small issue on IE11

--- a/app/assets/stylesheets/pages/community/_city_page.scss
+++ b/app/assets/stylesheets/pages/community/_city_page.scss
@@ -37,7 +37,7 @@
       }
     }
     @media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
-      height: 185px;
+      height: 175px;
     }
     @include media-breakpoint-down(sm) {
       height: auto;
